attempting to use repeating intents

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,8 +13,7 @@
     <Button
         android:id="@+id/start"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Start"/>
+        android:layout_height="wrap_content"/>
 
     <com.spookyrobotics.timelapsephotos.Preview
         android:id="@+id/camera_preview"
